--- a/roles/ensure-minikube/tasks/main.yml
+++ b/roles/ensure-minikube/tasks/main.yml
@@ -1,19 +1,24 @@
 ---
 # tasks file for roles/ensure-minikube
 
-- name: Install Minikube
-  become: true
-  dnf:
-    name: https://storage.googleapis.com/minikube/releases/latest/minikube-latest.x86_64.rpm
-    state: latest
-    disable_gpg_check: true
-
 - block:
   - name: Start Minikube
     shell: minikube start
     register: ensure_minikube_start
-  - debug: var=ensure_minikube_start
 
   rescue:
-  - debug: var=ensure_minikube_start
-    failed_when: true
+  - name: Ensure Docker is running
+    include_role: name=ensure-docker
+
+  - name: Install Minikube
+    become: true
+    dnf:
+      name: https://storage.googleapis.com/minikube/releases/latest/minikube-latest.x86_64.rpm
+      state: latest
+      disable_gpg_check: true
+
+  - name: Start Minikube
+    shell: minikube start
+    register: ensure_minikube_start
+
+- debug: var=ensure_minikube_start.stdout_lines
